# zsh_history_sorted

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml  zsh_history_sorter.py  zsh_sorter_test.py
docs/: index.md
src/zsh_history_sorter/: __init__.py  cli.py  history_sorter.py
tests/: test_zsh_sorter.py
